@@ -6,6 +6,7 @@
 	- RFC-01: Added vnlists feature and removed rlists.vstat option
 	- ULists::votelist: Don't give a 404 on /u+/votes when no votes found
 	- Added tab and link for /u+/votes to user tabs & main menu
+	- ULists::votelist: Added first character selection
 
 2.15 - 2010-12-15
 	- Removed expand/collapse from history browser and /u+/posts and switched to
